--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vision Pro AI — Premium</title>
+    <title>Chat-gpt Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
@@ -36,7 +36,7 @@
 
     <div id="loader">
         <div class="w-10 h-10 border-2 border-blue-500 border-t-transparent rounded-full animate-spin mb-4"></div>
-        <p class="text-xs tracking-[0.3em] text-zinc-500 uppercase font-medium">Vision Pro Initializing</p>
+        <p class="text-xs tracking-[0.3em] text-zinc-500 uppercase font-medium">Chat-gpt Pro Initializing</p>
     </div>
 
     <div class="flex h-full w-full relative">
@@ -45,7 +45,7 @@
                 <div class="flex flex-col gap-1 mb-6">
                     <div class="flex items-center gap-3">
                         <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center font-bold text-white shadow-lg shadow-blue-600/20">V</div>
-                        <span class="font-bold text-xl tracking-tight">Vision Pro</span>
+                        <span class="font-bold text-xl tracking-tight">Chat-gpt Pro</span>
                     </div>
                     <a href="https://t.me/AIwithMLbot" target="_blank" class="join-box mt-3 p-2.5 rounded-xl flex items-center justify-between group cursor-pointer">
                         <div class="flex items-center gap-2">
@@ -100,7 +100,7 @@
         <main class="flex-1 flex flex-col min-w-0 md:ml-72 bg-[#09090b] relative">
             <header class="p-4 md:hidden border-b border-zinc-800/50 glass sticky top-0 z-30 flex items-center justify-between">
                 <button onclick="toggleSidebar()" class="p-2 text-zinc-400">☰</button>
-                <span class="font-bold tracking-tight text-blue-500">Vision Pro</span>
+                <span class="font-bold tracking-tight text-blue-500">Chat-gpt Pro</span>
                 <a href="https://t.me/AIwithMLbot" target="_blank" class="p-2 text-blue-400">🤖</a>
             </header>
 
